ajout lub + fix assign + fix forgetIdentifier pour test1 test2 test5 fix tests ajout README pour equality